// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledInput renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderRadius": 27,
        "borderWidth": 1,
        "padding": 17,
        "paddingBottom": 3,
        "paddingTop": 7,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.02,
        "shadowRadius": 5,
      },
      undefined,
      Object {
        "borderColor": "#DADADA",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    editable={true}
    enablesReturnKeyAutomatically={true}
    keyboardType={undefined}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={undefined}
    placeholder={undefined}
    placeholderTextColor="#DADADA"
    returnKeyType="done"
    selectionColor="#007AFF"
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 13,
          "height": 27,
          "letterSpacing": 1.45,
          "width": 278,
        },
        undefined,
      ]
    }
    value={undefined}
  />
</View>
`;

exports[`StyledInput renders correctly with border color 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "borderRadius": 27,
        "borderWidth": 1,
        "padding": 17,
        "paddingBottom": 3,
        "paddingTop": 7,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.02,
        "shadowRadius": 5,
      },
      undefined,
      Object {
        "borderColor": "#33CF8B",
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize={undefined}
    autoCorrect={false}
    editable={true}
    enablesReturnKeyAutomatically={true}
    keyboardType={undefined}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    onSubmitEditing={undefined}
    placeholder={undefined}
    placeholderTextColor="#DADADA"
    returnKeyType={undefined}
    selectionColor="#007AFF"
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 13,
          "height": 27,
          "letterSpacing": 1.45,
          "width": 278,
        },
        undefined,
      ]
    }
    value={undefined}
  />
</View>
`;
